--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -90,7 +90,8 @@ selection-background-color: rgb(118, 158, 81);</string>
         <bool>false</bool>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color:  rgb(255, 255, 255);
+        <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
 border-style: outset;
 border-width: 2px;
 border-radius: 10px;
@@ -145,7 +146,8 @@ QPushButton#visit_store_button: clicked {
         <enum>Qt::RightToLeft</enum>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color:  rgb(255, 255, 255);
+        <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
 border-style: outset;
 border-width: 2px;
 border-radius: 10px;
@@ -206,7 +208,8 @@ QPushButton#plan_route_button: pressed {
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color:  rgb(255, 255, 255);
+           <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
 border-style: outset;
 border-width: 2px;
 border-color:rgb(118, 158, 81);
@@ -231,7 +234,8 @@ padding: 6px;
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color:  rgb(255, 255, 255);
+           <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
 border-style: outset;
 border-width: 2px;
 border-color:rgb(118, 158, 81);
@@ -256,7 +260,8 @@ padding: 6px;
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color:  rgb(255, 255, 255);
+           <string notr="true">color: rgb(49, 49, 49);
+background-color:  rgb(255, 255, 255);
 border-style: outset;
 border-width: 2px;
 border-color:rgb(118, 158, 81);
