additions to tripplanner.ui

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -15,5 +15,8 @@
         <file>arrow_up.png</file>
         <file>arrow_up-removebg.png</file>
         <file>menu-removebg.png</file>
+        <file>university_of_arizona_logo.png</file>
+        <file>uci_logo.png</file>
+        <file>university_of_michigan_logo.png</file>
     </qresource>
 </RCC>
