--- a/tripplanner.ui
+++ b/tripplanner.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="cart_frame">
     <property name="geometry">
@@ -23,18 +26,93 @@
       <height>61</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);</string>
+    </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
+    <widget class="QFrame" name="bubble_frame">
+     <property name="geometry">
+      <rect>
+       <x>185</x>
+       <y>10</y>
+       <width>51</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: none;</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <widget class="QLabel" name="cart_quantity_display">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>-2</y>
+        <width>51</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Mongolian Baiti</family>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: none;
+color: rgb(49, 49, 49);</string>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="bubble_photo">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>51</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Mongolian Baiti</family>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">image: url(:/bubble-removebg.png);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </widget>
     <widget class="QPushButton" name="shopping_cart_pushButton">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>171</width>
+       <width>176</width>
        <height>41</height>
       </rect>
      </property>
@@ -82,81 +160,13 @@ QPushButton#visit_store_button: clicked {
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QFrame" name="bubble_frame">
-     <property name="geometry">
-      <rect>
-       <x>180</x>
-       <y>10</y>
-       <width>51</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Mongolian Baiti</family>
-      </font>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
-     </property>
-     <widget class="QLabel" name="cart_quantity_display">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>-2</y>
-        <width>51</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Mongolian Baiti</family>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: none;
-color: rgb(49, 49, 49);</string>
-      </property>
-      <property name="text">
-       <string>0</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-     <widget class="QLabel" name="bubble_photo">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>51</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Mongolian Baiti</family>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">image: url(:/bubble-removebg.png);</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </widget>
    </widget>
-   <widget class="QFrame" name="frame_6">
+   <widget class="QFrame" name="start_at_frame">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>600</x>
       <y>70</y>
-      <width>191</width>
+      <width>241</width>
       <height>311</height>
      </rect>
     </property>
@@ -168,10 +178,10 @@ color: rgb(49, 49, 49);</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <widget class="QPushButton" name="pushButton_5">
+      <widget class="QPushButton" name="irvine_pushButton">
        <property name="minimumSize">
         <size>
-         <width>146</width>
+         <width>176</width>
          <height>90</height>
         </size>
        </property>
@@ -185,7 +195,6 @@ color: rgb(49, 49, 49);</string>
         <font>
          <family>Bahnschrift</family>
          <pointsize>11</pointsize>
-         <weight>50</weight>
          <bold>false</bold>
         </font>
        </property>
@@ -227,10 +236,10 @@ QPushButton#visit_store_button: clicked {
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="arizona_pushButton">
        <property name="minimumSize">
         <size>
-         <width>146</width>
+         <width>176</width>
          <height>90</height>
         </size>
        </property>
@@ -244,7 +253,6 @@ QPushButton#visit_store_button: clicked {
         <font>
          <family>Bahnschrift</family>
          <pointsize>11</pointsize>
-         <weight>50</weight>
          <bold>false</bold>
         </font>
        </property>
@@ -280,10 +288,10 @@ QPushButton#visit_store_button: clicked {
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="michigan_pushButton">
        <property name="minimumSize">
         <size>
-         <width>146</width>
+         <width>176</width>
          <height>90</height>
         </size>
        </property>
@@ -297,7 +305,6 @@ QPushButton#visit_store_button: clicked {
         <font>
          <family>Bahnschrift</family>
          <pointsize>11</pointsize>
-         <weight>50</weight>
          <bold>false</bold>
         </font>
        </property>
@@ -334,7 +341,7 @@ QPushButton#visit_store_button: clicked {
      </item>
     </layout>
    </widget>
-   <widget class="QFrame" name="frame_8">
+   <widget class="QFrame" name="button_frame">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -342,6 +349,10 @@ QPushButton#visit_store_button: clicked {
       <width>501</width>
       <height>51</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
@@ -370,6 +381,9 @@ QPushButton#visit_store_button: clicked {
        <height>0</height>
       </size>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background: none;</string>
+     </property>
      <property name="frameShadow">
       <enum>QFrame::Plain</enum>
      </property>
@@ -377,7 +391,7 @@ QPushButton#visit_store_button: clicked {
       <enum>Qt::Vertical</enum>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_10">
+    <widget class="QPushButton" name="remove_pushButton">
      <property name="geometry">
       <rect>
        <x>260</x>
@@ -388,15 +402,14 @@ QPushButton#visit_store_button: clicked {
      </property>
      <property name="minimumSize">
       <size>
-       <width>146</width>
+       <width>176</width>
        <height>18</height>
       </size>
      </property>
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
-       <pointsize>11</pointsize>
-       <weight>50</weight>
+       <pointsize>12</pointsize>
        <bold>false</bold>
       </font>
      </property>
@@ -425,7 +438,7 @@ QPushButton#visit_store_button: clicked {
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_9">
+    <widget class="QPushButton" name="add_pushButton">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -436,15 +449,14 @@ QPushButton#visit_store_button: clicked {
      </property>
      <property name="minimumSize">
       <size>
-       <width>146</width>
+       <width>176</width>
        <height>18</height>
       </size>
      </property>
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
-       <pointsize>11</pointsize>
-       <weight>50</weight>
+       <pointsize>12</pointsize>
        <bold>false</bold>
       </font>
      </property>
@@ -474,7 +486,7 @@ QPushButton#visit_store_button: clicked {
      </property>
     </widget>
    </widget>
-   <widget class="QFrame" name="frame_5">
+   <widget class="QFrame" name="total_distance_frame">
     <property name="geometry">
      <rect>
       <x>600</x>
@@ -493,7 +505,7 @@ color: rgb(0, 0, 0);</string>
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
-    <widget class="QLabel" name="distLabel">
+    <widget class="QLabel" name="distance_label">
      <property name="geometry">
       <rect>
        <x>154</x>
@@ -505,14 +517,14 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
-       <pointsize>11</pointsize>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="text">
       <string>0.0</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="total_title">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -524,7 +536,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>Mongolian Baiti</family>
-       <pointsize>11</pointsize>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="text">
@@ -539,7 +551,7 @@ color: rgb(0, 0, 0);</string>
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>160</y>
+      <y>110</y>
       <width>501</width>
       <height>41</height>
      </rect>
@@ -577,7 +589,7 @@ color: rgb(49, 49, 49);</string>
      </property>
     </widget>
    </widget>
-   <widget class="QFrame" name="frame_4">
+   <widget class="QFrame" name="place_order_frame">
     <property name="geometry">
      <rect>
       <x>600</x>
@@ -608,7 +620,6 @@ color: rgb(0, 0, 0);</string>
         <font>
          <family>Mongolian Baiti</family>
          <pointsize>14</pointsize>
-         <weight>50</weight>
          <bold>false</bold>
         </font>
        </property>
@@ -638,9 +649,9 @@ QPushButton#visit_store_button: clicked {
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>210</y>
+      <y>170</y>
       <width>501</width>
-      <height>311</height>
+      <height>351</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -649,13 +660,13 @@ QPushButton#visit_store_button: clicked {
     <property name="frameShadow">
      <enum>QFrame::Plain</enum>
     </property>
-    <widget class="QTableView" name="tripTableView">
+    <widget class="QTableView" name="available_routes_tableView">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>30</y>
        <width>251</width>
-       <height>281</height>
+       <height>321</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -735,13 +746,13 @@ selection-background-color: rgb(118, 158, 81);</string>
       <bool>true</bool>
      </attribute>
     </widget>
-    <widget class="QTableView" name="routeTableView">
+    <widget class="QTableView" name="selected_route_tableView">
      <property name="geometry">
       <rect>
        <x>250</x>
        <y>30</y>
        <width>251</width>
-       <height>281</height>
+       <height>321</height>
       </rect>
      </property>
      <property name="font">
@@ -806,7 +817,7 @@ selection-background-color: rgb(118, 158, 81);</string>
       <number>28</number>
      </attribute>
     </widget>
-    <widget class="QComboBox" name="restComboBox">
+    <widget class="QComboBox" name="starting_location_dropdown">
      <property name="geometry">
       <rect>
        <x>0</x>
@@ -900,8 +911,8 @@ selection-background-color: rgb(118, 158, 81);</string>
          </brush>
         </colorrole>
         <colorrole role="PlaceholderText">
-         <brush brushstyle="NoBrush">
-          <color alpha="128">
+         <brush brushstyle="SolidPattern">
+          <color alpha="255">
            <red>49</red>
            <green>49</green>
            <blue>49</blue>
@@ -992,8 +1003,8 @@ selection-background-color: rgb(118, 158, 81);</string>
          </brush>
         </colorrole>
         <colorrole role="PlaceholderText">
-         <brush brushstyle="NoBrush">
-          <color alpha="128">
+         <brush brushstyle="SolidPattern">
+          <color alpha="255">
            <red>49</red>
            <green>49</green>
            <blue>49</blue>
@@ -1084,8 +1095,8 @@ selection-background-color: rgb(118, 158, 81);</string>
          </brush>
         </colorrole>
         <colorrole role="PlaceholderText">
-         <brush brushstyle="NoBrush">
-          <color alpha="128">
+         <brush brushstyle="SolidPattern">
+          <color alpha="255">
            <red>49</red>
            <green>49</green>
            <blue>49</blue>
@@ -1131,7 +1142,7 @@ QPushButton#visit_store_button: clicked {
       <number>0</number>
      </property>
     </widget>
-    <widget class="QFrame" name="frame_7">
+    <widget class="QFrame" name="selected_route_title">
      <property name="geometry">
       <rect>
        <x>250</x>
@@ -1146,13 +1157,17 @@ QPushButton#visit_store_button: clicked {
        <pointsize>11</pointsize>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);</string>
+     </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Plain</enum>
      </property>
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="location_label">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -1178,7 +1193,7 @@ color: rgb(49, 49, 49);</string>
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
-     <widget class="QLabel" name="label_6">
+     <widget class="QLabel" name="distance_next_label">
       <property name="geometry">
        <rect>
         <x>120</x>
